# api/gen/http/cli/example/cli.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.7.10, DO NOT EDIT.
+// Code generated by goa v3.7.12, DO NOT EDIT.
 //
 // Example HTTP client CLI support package
 //
@@ -31,12 +31,14 @@ func UsageCommands() string {
 // UsageExamples produces an example of a valid invocation of the CLI tool.
 func UsageExamples() string {
 	return os.Args[0] + ` foo-service foo-method --body '{
+      "DateField": "2009-08-25T06:53:12Z",
       "External": {
-         "Field": "Quia non aspernatur."
+         "Field": "Ut mollitia id similique."
       },
       "SecondExternal": {
-         "Field": "Aut quasi ut mollitia."
-      }
+         "Field": "Corrupti distinctio ut."
+      },
+      "UintField": 10644113808551616344
    }'` + "\n" +
 		""
 }
@@ -156,12 +158,14 @@ FooMethod implements FooMethod.
 
 Example:
     %[1]s foo-service foo-method --body '{
+      "DateField": "2009-08-25T06:53:12Z",
       "External": {
-         "Field": "Quia non aspernatur."
+         "Field": "Ut mollitia id similique."
       },
       "SecondExternal": {
-         "Field": "Aut quasi ut mollitia."
-      }
+         "Field": "Corrupti distinctio ut."
+      },
+      "UintField": 10644113808551616344
    }'
 `, os.Args[0])
 }
