# api/gen/http/foo_service/server/encode_decode.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.7.10, DO NOT EDIT.
+// Code generated by goa v3.7.12, DO NOT EDIT.
 //
 // FooService HTTP server encoders and decoders
 //
@@ -14,6 +14,7 @@ import (
 	"net/http"
 
 	fooservice "github.com/ernesto-jimenez/example-failing-goa-design/api/gen/foo_service"
+	types "github.com/ernesto-jimenez/example-failing-goa-design/api/gen/types"
 	goahttp "goa.design/goa/v3/http"
 	goa "goa.design/goa/v3/pkg"
 )
@@ -55,27 +56,27 @@ func DecodeFooMethodRequest(mux goahttp.Muxer, decoder func(*http.Request) goaht
 	}
 }
 
-// unmarshalExternalTypeRequestBodyToFooserviceExternalType builds a value of
-// type *fooservice.ExternalType from a value of type *ExternalTypeRequestBody.
-func unmarshalExternalTypeRequestBodyToFooserviceExternalType(v *ExternalTypeRequestBody) *fooservice.ExternalType {
+// unmarshalExternalTypeRequestBodyToTypesExternalType builds a value of type
+// *types.ExternalType from a value of type *ExternalTypeRequestBody.
+func unmarshalExternalTypeRequestBodyToTypesExternalType(v *ExternalTypeRequestBody) *types.ExternalType {
 	if v == nil {
 		return nil
 	}
-	res := &fooservice.ExternalType{
+	res := &types.ExternalType{
 		Field: *v.Field,
 	}
 
 	return res
 }
 
-// unmarshalSecondExternalTypeRequestBodyToFooserviceSecondExternalType builds
-// a value of type *fooservice.SecondExternalType from a value of type
+// unmarshalSecondExternalTypeRequestBodyToTypesSecondExternalType builds a
+// value of type *types.SecondExternalType from a value of type
 // *SecondExternalTypeRequestBody.
-func unmarshalSecondExternalTypeRequestBodyToFooserviceSecondExternalType(v *SecondExternalTypeRequestBody) *fooservice.SecondExternalType {
+func unmarshalSecondExternalTypeRequestBodyToTypesSecondExternalType(v *SecondExternalTypeRequestBody) *types.SecondExternalType {
 	if v == nil {
 		return nil
 	}
-	res := &fooservice.SecondExternalType{
+	res := &types.SecondExternalType{
 		Field: v.Field,
 	}
 
@@ -85,20 +86,23 @@ func unmarshalSecondExternalTypeRequestBodyToFooserviceSecondExternalType(v *Sec
 // marshalFooserviceExampleTypeToExampleTypeResponse builds a value of type
 // *ExampleTypeResponse from a value of type *fooservice.ExampleType.
 func marshalFooserviceExampleTypeToExampleTypeResponse(v *fooservice.ExampleType) *ExampleTypeResponse {
-	res := &ExampleTypeResponse{}
+	res := &ExampleTypeResponse{
+		DateField: v.DateField,
+		UintField: v.UintField,
+	}
 	if v.External != nil {
-		res.External = marshalFooserviceExternalTypeToExternalTypeResponse(v.External)
+		res.External = marshalTypesExternalTypeToExternalTypeResponse(v.External)
 	}
 	if v.SecondExternal != nil {
-		res.SecondExternal = marshalFooserviceSecondExternalTypeToSecondExternalTypeResponse(v.SecondExternal)
+		res.SecondExternal = marshalTypesSecondExternalTypeToSecondExternalTypeResponse(v.SecondExternal)
 	}
 
 	return res
 }
 
-// marshalFooserviceExternalTypeToExternalTypeResponse builds a value of type
-// *ExternalTypeResponse from a value of type *fooservice.ExternalType.
-func marshalFooserviceExternalTypeToExternalTypeResponse(v *fooservice.ExternalType) *ExternalTypeResponse {
+// marshalTypesExternalTypeToExternalTypeResponse builds a value of type
+// *ExternalTypeResponse from a value of type *types.ExternalType.
+func marshalTypesExternalTypeToExternalTypeResponse(v *types.ExternalType) *ExternalTypeResponse {
 	if v == nil {
 		return nil
 	}
@@ -109,10 +113,10 @@ func marshalFooserviceExternalTypeToExternalTypeResponse(v *fooservice.ExternalT
 	return res
 }
 
-// marshalFooserviceSecondExternalTypeToSecondExternalTypeResponse builds a
-// value of type *SecondExternalTypeResponse from a value of type
-// *fooservice.SecondExternalType.
-func marshalFooserviceSecondExternalTypeToSecondExternalTypeResponse(v *fooservice.SecondExternalType) *SecondExternalTypeResponse {
+// marshalTypesSecondExternalTypeToSecondExternalTypeResponse builds a value of
+// type *SecondExternalTypeResponse from a value of type
+// *types.SecondExternalType.
+func marshalTypesSecondExternalTypeToSecondExternalTypeResponse(v *types.SecondExternalType) *SecondExternalTypeResponse {
 	if v == nil {
 		return nil
 	}
