# api/gen/http/foo_service/server/types.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.7.10, DO NOT EDIT.
+// Code generated by goa v3.7.12, DO NOT EDIT.
 //
 // FooService HTTP server types
 //
@@ -18,6 +18,8 @@ import (
 type FooMethodRequestBody struct {
 	External       *ExternalTypeRequestBody       `form:"External,omitempty" json:"External,omitempty" xml:"External,omitempty"`
 	SecondExternal *SecondExternalTypeRequestBody `form:"SecondExternal,omitempty" json:"SecondExternal,omitempty" xml:"SecondExternal,omitempty"`
+	DateField      *string                        `form:"DateField,omitempty" json:"DateField,omitempty" xml:"DateField,omitempty"`
+	UintField      *uint                          `form:"UintField,omitempty" json:"UintField,omitempty" xml:"UintField,omitempty"`
 }
 
 // FooMethodResponseBody is the type of the "FooService" service "FooMethod"
@@ -28,6 +30,8 @@ type FooMethodResponseBody []*ExampleTypeResponse
 type ExampleTypeResponse struct {
 	External       *ExternalTypeResponse       `form:"External,omitempty" json:"External,omitempty" xml:"External,omitempty"`
 	SecondExternal *SecondExternalTypeResponse `form:"SecondExternal,omitempty" json:"SecondExternal,omitempty" xml:"SecondExternal,omitempty"`
+	DateField      string                      `form:"DateField" json:"DateField" xml:"DateField"`
+	UintField      uint                        `form:"UintField" json:"UintField" xml:"UintField"`
 }
 
 // ExternalTypeResponse is used to define fields on response body types.
@@ -62,12 +66,15 @@ func NewFooMethodResponseBody(res []*fooservice.ExampleType) FooMethodResponseBo
 
 // NewFooMethodPayload builds a FooService service FooMethod endpoint payload.
 func NewFooMethodPayload(body *FooMethodRequestBody) *fooservice.FooMethodPayload {
-	v := &fooservice.FooMethodPayload{}
+	v := &fooservice.FooMethodPayload{
+		DateField: fooservice.DateTime(*body.DateField),
+		UintField: *body.UintField,
+	}
 	if body.External != nil {
-		v.External = unmarshalExternalTypeRequestBodyToFooserviceExternalType(body.External)
+		v.External = unmarshalExternalTypeRequestBodyToTypesExternalType(body.External)
 	}
 	if body.SecondExternal != nil {
-		v.SecondExternal = unmarshalSecondExternalTypeRequestBodyToFooserviceSecondExternalType(body.SecondExternal)
+		v.SecondExternal = unmarshalSecondExternalTypeRequestBodyToTypesSecondExternalType(body.SecondExternal)
 	}
 
 	return v
@@ -76,10 +83,19 @@ func NewFooMethodPayload(body *FooMethodRequestBody) *fooservice.FooMethodPayloa
 // ValidateFooMethodRequestBody runs the validations defined on
 // FooMethodRequestBody
 func ValidateFooMethodRequestBody(body *FooMethodRequestBody) (err error) {
+	if body.DateField == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("DateField", "body"))
+	}
+	if body.UintField == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("UintField", "body"))
+	}
 	if body.External != nil {
 		if err2 := ValidateExternalTypeRequestBody(body.External); err2 != nil {
 			err = goa.MergeErrors(err, err2)
 		}
+	}
+	if body.DateField != nil {
+		err = goa.MergeErrors(err, goa.ValidateFormat("body.DateField", *body.DateField, goa.FormatDateTime))
 	}
 	return
 }
